--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 
+/* All styles */
+
 header{
     background-color: #ffffff;
     border-bottom-style: solid;
@@ -6,6 +8,8 @@ header{
     border-bottom-width: 1.5px;
     height: 60px;
     padding: 0%;
+    margin-bottom: 4%;
+    overflow: hidden;
 }
 
 .name{
@@ -17,26 +21,49 @@ header{
     text-rendering: optimizeLegibility; 
     text-rendering: geometricPrecision;
     font-size: 30px;
-    height: 100%;
+    height: 50px;
     width: 200px;
     margin: 0;
-    padding: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+ 
 }
 
 body{
-    background-image: url("back.png");
+    background-image: url("../images/background5.png");
+    /* overflow: hidden; */
+}
+
+p{
+    margin-top: 0%;
+    margin-bottom:3%;
+
 
 }
+
 .imageContainer{
     float:left;
-    margin-top: 2%;
+    margin-top: 0%;
     margin-right:2%;
-    margin-bottom: 2%;
-    margin-right: 0%;
+    margin-bottom: 1%;
+    margin-left: 0%;
+
 }
 .mainContainer{
-    width: 960px;
+    width: 910px;
     margin: 0 auto;
+    background-color: #ffffff;
+    padding: 25px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    margin-bottom: 5%;
+    border: #dddddd;
+    border-width: 1px;
+    border-style: solid;
+    overflow: auto;
+    height: 595px;
+ 
 }
 
 .headerMargin{
@@ -50,8 +77,8 @@ body{
 .navBar{
     color:#777777;
     float: right;
-    height: 100%;
-    padding-top: 4.5%;
+    height: 38px;
+    padding-top: 22px;
     padding-right: 0px;
     margin-right:0px;
     
@@ -101,6 +128,8 @@ body{
     border-bottom-style: solid;
     border-bottom-color: #dddddd;
     border-bottom-width: 3px;
+    padding-bottom: 2%;
+    margin-bottom: 2%;
     
 }
 
@@ -117,7 +146,7 @@ footer{
     border-top-style: solid;
     border-top-color: #4aaaa5;
     border-top-width: 9px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px;
@@ -130,10 +159,120 @@ footer{
 
 .copyright{
     position: relative;
-    right: -50%;
+    right: -48%;
     top: 60%;
+    font-size: 12px;
 }
 
 ::-webkit-scrollbar { 
     display: none; 
+}
+
+/* Styles specific to the portfolio/gallery page */
+
+span{
+    float: left;
+    width: 300px;
+    height:300px;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    position: relative;
+    margin-right: 25px;
+    margin-bottom: 12.5px;
+    margin-top: 12.5px;
+    margin-left: 0px;
+    
+}
+
+.galleryLabels{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    top: 75%;
+    text-align: center;
+    
+}
+
+.mainContainerPortfolio{
+
+    height: 600px;
+    overflow: scroll;
+}
+
+.galleryImages{
+    position: absolute;
+}
+
+
+/* Styling for contact form */
+
+.formControls{
+
+}
+
+label{
+    float: left;
+    color:#777777;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-bottom: 1%;
+}
+
+#fname{
+    width: 100%;
+    box-sizing: border-box;
+    border: #dddddd;
+    border-width: 1px;
+    border-style: solid;
+    height: 15px;
+    margin-bottom: 2%;
+    height: 30px;
+}
+
+#email{
+    width: 100%;
+    box-sizing: border-box;
+    border: #dddddd;
+    border-width: 1px;
+    border-style: solid;
+    margin-bottom: 2%;
+    height: 30px;
+}
+
+#subject{
+    width: 100%;
+    box-sizing: border-box;
+    border: #dddddd;
+    border-width: 1px;
+    border-style: solid;
+    margin-bottom: 2%;
+    height: 150px;
+}
+
+#submitButton{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    border-style: none;
+    height: 40px;
+    width: 110px;
+    font-size: 15px;
+}
+
+.mainContainerContact{
+    width: 910px;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 25px;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    margin-bottom: 5%;
+    border: #dddddd;
+    border-width: 1px;
+    border-style: solid;
+    overflow: auto;
+   
+
 }
